syntax = "proto3";

option csharp_namespace = "ProductCloud.SharedKernal.Protos";

package plan;

service PlanGrpc {
  rpc GetPlanDetails (GetPlanRequest) returns (PlanResponse);
}

message GetPlanRequest {
  string planId = 1;
}

message PlanResponse {
  string planId = 1;
  string name = 2;
  string description = 3;
  string monthlyPrice = 4;
  string annaulPrice = 5;
  string currency = 6;
}
